--- a/views/nueva-vacante.handlebars
+++ b/views/nueva-vacante.handlebars
@@ -29,6 +29,10 @@
             </select>
         </div>
         <h3>Descipción del cargo</h3>
-        
+        <div class="campo descripcion">
+            <label>Descripción</label>
+            <input type="hidden" name="descripcion" id="x">
+            <trix-editor input="x"></trix-editor>
+        </div>
     </form>
 </main>
