--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,37 +1,26 @@
 <main class="lista-vacantes">
     <h2>Lista de vacantes</h2>
-    <div class="vacante">
-        <div class="caja">
-            <h3>Facebook</h3>
-            <div class="puesto">React Developer</div>
-        </div>
-        <div class="caja">
-            <div class="etiqueta">Ubicación</div>
-            <div class="nombre">Remoto</div>
-        </div>
-        <div class="caja">
-            <div class="etiqueta">Contrato</div>
-            <div class="nombre contrato">Tiempo Completo</div>
-        </div>
-        <div class="caja centrar-vertical">
-            <a href="#" class="btn btn-verde">Más info</a>
-        </div>
-    </div>
-      <div class="vacante">
-        <div class="caja">
-            <h3>AirBNB</h3>
-            <div class="puesto">Node Developer</div>
-        </div>
-        <div class="caja">
-            <div class="etiqueta">Ubicación</div>
-            <div class="nombre">Remoto</div>
-        </div>
-        <div class="caja">
-            <div class="etiqueta">Contrato</div>
-            <div class="nombre contrato">Tiempo Completo</div>
-        </div>
-        <div class="caja centrar-vertical">
-            <a href="#" class="btn btn-verde">Más info</a>
-        </div>
-    </div>
+    {{#if vacante.length}}
+        {{#each vacante}}
+            <div class="vacante">
+                <div class="caja">
+                    <h3>{{empresa}}</h3>
+                    <div class="puesto">{{titulo}}</div>
+                </div>
+                <div class="caja">
+                    <div class="etiqueta">Ubicación</div>
+                    <div class="nombre">{{ubiccion}}</div>
+                </div>
+                <div class="caja">
+                    <div class="etiqueta">Contrato</div>
+                    <div class="nombre contrato">{{contrato}}</div>
+                </div>
+                <div class="caja centrar-vertical">
+                    <a href="/vacante/{{url}}" class="btn btn-verde">Más info</a>
+                </div>
+            </div>
+        {{/each}}
+    {{else}}
+        <p>no hay vacantes</p>
+    {{/if}}
 </main>
