--- a/views/vacante.handlebars
+++ b/views/vacante.handlebars
@@ -23,6 +23,7 @@
         <div class="vacante-descripcion">
             {{{vacante.descripcion}}}
         </div>
+        <a href="/vacante/editar/{{vacante.url}}" class="btn btn-azul editar-btn">Editar Vacante</a>
     </main>
     <aside class="sidebar">
         <h2>Conocimiento deseado</h2>
