validacion de errores en formulario de creacion de cuentas

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -33,6 +33,12 @@
         {{/if}}
     </header>
     <div class="contenedor-principal contenedor">
+        {{#if mensajes}}
+            <div class="alertas">
+                {{#mostrarAlertas mensajes}}
+                {{/mostarAlertas}}
+            </div>
+        {{/if}}
         {{{body}}}
     </div>
 
