--- a/views/nueva-vacante.handlebars
+++ b/views/nueva-vacante.handlebars
@@ -4,19 +4,19 @@
 
         <div class="campo">
             <label>Titulo</label>
-            <input type="text" name="titulo" placeholder="Ej: React Developer" required>
+            <input type="text" name="titulo" placeholder="Ej: React Developer" >
         </div>
         <div class="campo">
             <label>Empresa</label>
-            <input type="text" name="titulo" placeholder="Empresa contratada" required>
+            <input type="text" name="titulo" placeholder="Empresa contratada" >
         </div>
         <div class="campo">
             <label>Ubicación</label>
-            <input type="text" name="ubicacion" placeholder="Ej; Mexico" required>
+            <input type="text" name="ubicacion" placeholder="Ej; Mexico" >
         </div>
          <div class="campo">
             <label>Salario (USD)</label>
-            <input type="text" name="salario" placeholder="Ej; 500 USD" required>
+            <input type="text" name="salario" placeholder="Ej; 500 USD" >
         </div>
         <div class="campo">
             <label>Contrato</label>
