vista y controlador candidatos

--- a/views/editar-perfil.handlebars
+++ b/views/editar-perfil.handlebars
@@ -15,6 +15,7 @@
         <div class="campo">
             <label>Imagen</label>
             <input type="file" name="imagen" placeholder="Tu imagen de perfil">
+            <img src="uploads/perfile/{{usuario.imagen}}" alt="imagen del perfil" class="admin-perfil">
         </div>
         <div class="campo">
             <input type="submit" value="Guardar" class="btn btn-azul">
