--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -25,6 +25,9 @@
         {{#if cerrarSesion}}
             <div class="cerrar-sesion">
                 <p>Hola! {{nombre}}</p>
+                {{#if imagen}}
+                    <img src="uploads/perfiles/{{imagen}}" alt="imagen del perfil" class="admin-perfil">
+                {{/if}}
                 <a href="/administracion">Administración</a>
                 <a href="/cerrar-sesion">Cerrar Sesión</a>
             </div>
