--- a/views/vacante.handlebars
+++ b/views/vacante.handlebars
@@ -34,3 +34,36 @@
         </ul>
     </aside>
 </div>
+<div class="contenedor datos-reclutador">
+    <div class="enviar-datos">
+        <h2>Contactar Reclutador</h2>
+        <p>Llena el siguiente formulrio, sube tu curriculum y pronto te contactaremos</p>
+        <form method="POST" action="/vacentes/{{vacante.url}}" class="default-form" enctype="multipart/form-data">
+            <div class="campo">
+                <label>Nombre</label>
+                <input type="text" name="nombre" placeholder="Tu nombre">
+            </div>
+              <div class="campo">
+                <label>E-mail</label>
+                <input type="email" name="email" placeholder="Tu E-mail">
+            </div>
+            <div class="campo">
+                <label>CV (PDF)</label>
+                <input type="file" name="cv">
+            </div>
+            <div class="campo">
+                <input type="submit" value="Enviar" class="btn btn-verde">
+            </div>
+        </form>
+    </div>
+
+    <div class="info-reclutador">
+        <h2>Información reclutador</h2>
+        {{#if vacante.autor.nombre}}
+            <p>{{vacante.autor.nombre}}</p>
+        {{/if}}
+        {{#if vacante.autor.imagen}}
+            <img src="/uploads/perfiles/{{vacante.autor.imagen}}" alt="foto perfil">
+        {{/if}}
+    </div>
+</div>
